loadbalancer.tf
resource "aws_lb" "app" {
  name               = "ecs-demo-alb"
  internal           = false
  load_balancer_type = "application"
  subnets            = [for subnet in aws_default_subnet.default : subnet.id]
  security_groups    = [aws_security_group.alb.id]
}

resource "aws_lb_target_group" "app" {
  name        = "ecs-demo-tg"
  port        = 3000
  protocol    = "HTTP"
  vpc_id      = aws_default_vpc.default.id
  target_type = "ip"
}

resource "aws_lb_listener" "http" {
  load_balancer_arn = aws_lb.app.arn
  port              = 80
  protocol          = "HTTP"

  default_action {
    type             = "forward"
    target_group_arn = aws_lb_target_group.app.arn
  }
}
